@@ -38,6 +38,7 @@ Underscores is distributed under the terms of the GNU GPL v2 or later.
 	7.2 Blog
 	7.3 Comments
 	7.4 Contact
+	7.5 Donation
 8.0 Infinite scroll
 9.0 Media
 	9.1 Captions
@@ -1791,6 +1792,66 @@ form.contact-form input[type="submit"] {
   -moz-transition: all 0.2s ease;
   -o-transition: all 0.2s ease;
   -ms-transition: all 0.2s ease;
+}
+
+/*--------------------------------------------------------------
+7.5 Donation
+--------------------------------------------------------------*/
+.give-form-wrap .give-form-title {
+  font-size: 1.1em;
+  font-style: italic;
+  margin-bottom: 1em;
+}
+.give-form-wrap fieldset {
+  padding: 0;
+}
+.give-form-wrap fieldset#give-payment-mode-select {
+  padding: 1em 2em;
+  background-color: #eceff1;
+}
+.give-form-wrap fieldset legend {
+  background-color: #eceff1;
+}
+.give-form-wrap #give_purchase_form_wrap {
+  padding: 1em 2em;
+  background-color: #eceff1;
+}
+.give-form-wrap input[type="submit"] {
+  background-color: #546e7a;
+  border: medium none;
+  box-shadow: 0 1px 4px 0 rgba(69, 90, 100, 0.16);
+  color: #fff;
+  display: block;
+  font-size: 12px;
+  letter-spacing: 0.05em;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  transition: all 0.2s ease 0s;
+}
+
+#give-recurring-form legend, form.give-form legend, form[id*="give-form"] legend {
+  font-family: "Lora", serif;
+  font-weight: normal;
+  font-size: 1.1em;
+  font-style: italic;
+}
+
+form[id*="give-form"] .give-donation-amount .give-currency-symbol, form[id*="give-form"] #give-final-total-wrap .give-donation-total-label, form[id*="give-form"] #give-final-total-wrap .give-final-total-amount {
+  height: 55px;
+  line-height: 55px;
+}
+
+form[id*="give-form"] .give-donation-amount #give-amount {
+  height: 55px;
+  line-height: 50px;
+}
+
+#give-recurring-form .form-row input[type="text"], #give-recurring-form .form-row input[type="email"], #give-recurring-form .form-row input[type="password"], #give-recurring-form .form-row select, #give-recurring-form .form-row textarea, form.give-form .form-row input[type="text"], form.give-form .form-row input[type="email"], form.give-form .form-row input[type="password"], form.give-form .form-row select, form.give-form .form-row textarea, form[id*="give-form"] .form-row input[type="text"], form[id*="give-form"] .form-row input[type="email"], form[id*="give-form"] .form-row input[type="password"], form[id*="give-form"] .form-row select, form[id*="give-form"] .form-row textarea {
+  background-color: white;
+  border-color: #f5f5f5;
+  box-shadow: none;
+  color: #38474d;
+  height: 3rem;
 }
 
 /*--------------------------------------------------------------
