@@ -7,6 +7,7 @@
 * Updated default gallery display
 * Updated comments style
 * Fixed footer copyright setting
+* Added support for Give Donation plugin
 
 = 1.0 - Sept 10, 2015 =
 * Initial release
